# e6502

./: .clang-tidy  LICENSE  README.md  meson.build
apps/: e6502.c  sandbox.c
examples/: build.ninja  hello.asm
include/: e6502.h
src/: addr.c  cpu.c  cpu.h  instr.c  op.c
